#5 - correção ortografica introdução

--- a/bibliografia/referencias.bib
+++ b/bibliografia/referencias.bib
@@ -44,7 +44,7 @@
     year={2017},
     address={Rio de Janeiro},
     pages={61},
-    org-short={EPE-BalanÇo},
+    org-short={EPE BalanÇo},
     organization={EMPRESA DE PESQUISA ENERG{\'E}TICA}
 }
 
@@ -53,7 +53,7 @@
     year={2017},
     address={Brasília},
     pages={232},
-    org-short={EPE-Anu{\'a}rio},
+    org-short={EPE Anu{\'a}rio},
     organization={EMPRESA DE PESQUISA ENERG{\'E}TICA}
 }
 
@@ -62,7 +62,7 @@
     year={2015},
     address={Brasília},
     pages={232},
-    org-short={EPE-Anu{\'a}rio},
+    org-short={EPE Anu{\'a}rio},
     organization={EMPRESA DE PESQUISA ENERG{\'E}TICA}
 }
 
@@ -71,7 +71,7 @@
     year={2017},
     address={Rio de Janeiro},
     pages={294},
-    org-short={EPE-BalanÇo-Final},
+    org-short={EPE BalanÇo Final},
     organization={EMPRESA DE PESQUISA ENERG{\'E}TICA}
 }
 
