--- a/pre-textuais/resumo.tex
+++ b/pre-textuais/resumo.tex
@@ -6,7 +6,7 @@ Este trabalho consiste no desenvolvimento de um sistema domiciliar de monitorame
 Tem como proposta um dispositivo e um sistema que juntos somam a nova realidade de meios para a economia de energia.
 O equipamento tem como base a plataforma de prototipagem NodeMCU que possui o microcontrolador ESP8266 acoplado em seu circuito integrado,
 o circuito que é controlado pelo NodeMCU possui um sensor de corrente que afere o consumo em tempo real de um dispositivo e, através
-do envio desses dados a um servidor onde possui comunicação com um agente consumidor é possível acompanhar todo o consumo de energia elétrica em tempo real.
+do envio desses dados a um servidor onde possui comunicação com um agente consumidor, é possível acompanhar todo o consumo de energia elétrica em tempo real.
 O intuito é que o constante monitoramento possa trazer uma conscientização da economia de energia.
  
  \noindent
