--- a/textuais/introducao.tex
+++ b/textuais/introducao.tex
@@ -1,15 +1,15 @@
 \chapter[Introdução]{Introdução}
 \label{ch:introdução}
-A eletricidade se tornou um pilar central na atualidade, sendo uma das principais fontes de força, calor e luz utilizada no  mundo. Entrantando com o
-crescente consumo de energia elétrica nos últimos tempos, a demanda por produção da mesma teve um crecismento significativo, trazendo consigo 
+A eletricidade se tornou um pilar central na atualidade, sendo uma das principais fontes de força, calor e luz utilizada no  mundo. Entretanto com o
+crescente consumo de energia elétrica nos últimos tempos, a demanda por produção da mesma teve um crescimentno significativo, trazendo consigo 
 impactos ambientais e econômicos. O Brasil por mais que possua em seu território grandes possibilidade para a construção de fontes de obtenção de energia, não
 está isento do problema da alta demanda por energia elétrica. Problema que se agravou em 2015 quando o país começou a passar por
 uma crise hídrica.
 
 Como a \autoref{fig:rede_convencional} mostra, a maior parte da energia elétrica gerada no Brasil é por meio de hidroelétricas, essa dependência
-energetica junto com a crise hídrica que o país sofreu cuminou em uma política de racionamento e aumento dos impostos - taxa inflacionária no
+energética junto com a crise hídrica que o país sofreu culminou em uma política de racionamento e aumento dos impostos - taxa inflacionária no
 consumo de energia elétrica - que impactou diretamente a vida de cada cidadão brasileiro, trouxe consequências, como o aumento do 
-custo da energia elétrica. Segundos dados (G1, 2016) entre 2015 e 2016 a crise hídrica no Brasil não interferiu apenas na conta de luz mas trouxe
+custo da energia elétrica. Entre 2015 e 2016 a crise hídrica no Brasil não interferiu apenas na conta de luz mas trouxe
 um aumento na inflação do país.
 
 % sustentabilidade
@@ -29,10 +29,10 @@ um aumento na inflação do país.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 O Consumo de energia elétrica é um dos principais indicadores de desenvolvimento e de qualidade de vida 
-de um país. Esse índice é tão importate que reflete diretamente no rítimo de vida de uma populção, pois mostra
-se as atividades industriais de uma nação está ou não em um bom rítimo e pode detectar se o comércio está em alta,
-devido aos bens e serviços que o povo adiquiriu. Porém um crescimento desordenado na população e um crescimento
-exponencial no consumo de enérgia pode acarretar em problemas para um determinado país.
+de um país. Esse índice é tão importante que reflete diretamente no ritmo de vida de uma população, pois mostra
+se as atividades industriais de uma nação está ou não em um bom ritmo e pode detectar se o comércio está em alta,
+devido aos bens e serviços que o povo adquiriu. Porém um crescimento desordenado na população e um crescimento
+exponencial no consumo de energia pode acarretar em problemas para um determinado país.
 Analisando os dados \cite{epe-balanco-final}, o consumo de energia
 elétrica no Brasil vem crescendo ao longo dos anos, o brasileiro vem consumindo mais energia elétrica, nos últimos
 35 anos teve um crescimento médio de 6,72\% dessa demanda, após a crise que o Brasil sofreu entre os anos 2002 e 2005 houve um crescimento
@@ -49,16 +49,16 @@ passando ao longo dos anos, até 2008 o país consumia mais do que produzia.
 \FloatBarrier
 
 O governo brasileiro tomou algumas medidas estratégicas para poder acompanhar a crescente demanda por energia elétrica, constituiu o planejamento
-da construção de mais de 80 usinas até 2020, hidroelétricas, temoelétricas e até usina nuclear. Um grande problema desse planjamento que o gorverno
-fez são os inumeros impactos ambientais e econômicos, um exemplo prático é a usina de de Belo Monte - Rio Xingu, Pará - obra que foi planejada
-para ser a quarta maior hidroelétrica do mundo, a maior do Brasil, com capacidade habastecer 40\% das recidências, foi orçada em R\$ 30 bilhões
+da construção de mais de 80 usinas até 2020, hidroelétricas, termoelétricas e até usina nuclear. Um grande problema desse planejamento que o governo
+fez são os inúmeros impactos ambientais e econômicos, um exemplo prático é a usina de de Belo Monte - Rio Xingu, Pará - obra que foi planejada
+para ser a quarta maior hidroelétrica do mundo, a maior do Brasil, com capacidade abastecer 40\% das residências, foi orçada em R\$ 30 bilhões
 deveria ter seu início de operação no segundo semestre de 2015 mas até os dias atuais não entrou em funcionamento. Vale salientar que a construção
 trouxe o desmatamento de áreas indígenas, alagamentos permanentes, comprometimento da fauna e flora e aumento da dificuldade dos transportes fluviais
 de comunidades ribeirinhas.
 
-Analisando a grande demanda energetica que o brasileiro vem requerindo e levando em conta as consquências negativas do planejamento das 80 usinas,
-surgi uma questão bastante recorrente: - "O que fazer? Constuir usinas mesmo sabendo dos impactos negativos que podem surgir, ou não construí-las e
-aumentar a tarifação pelo consumo de energia visando diminuir o consumo?" - A resposta para essas e outras questões que podem aparecer não são fáceis.
+Analisando a grande demanda energética que o brasileiro vem requerendo e levando em conta as consequências negativas do planejamento das 80 usinas,
+surgi uma questão bastante recorrente: - "O que fazer? Construir usinas mesmo sabendo dos impactos negativos que podem surgir, ou não construí-las e
+aumentar a tarifação pelo consumo de energia visando diminuir o uso?" - A resposta para essas e outras questões que podem aparecer não são fáceis.
 Entretanto o governo brasileiro optou por deixar o consumo de energia elétrica mais caro, principalmente nos horários de pico. A evolução da tarifa,
 pode ser observada na \autoref{evolucao-tarifa}
 
@@ -80,15 +80,15 @@ pode ser observada na \autoref{evolucao-tarifa}
 \end{table}
 
 Uma medida totalmente cabível que ainda é desconhecida por alguns brasileiros é a chamada "\textit{exposição da informação}", deixando sempre bem claro 
-quanto o consumidor tem gastado ou consumindo ao longo do mês em sua recidência, isso é possível graças a equipamentos que estão sempre monitorando
+quanto o consumidor tem gastado ou consumindo ao longo do mês em sua residência, isso é possível graças a equipamentos que estão sempre monitorando
 a rede elétrica.Segundo uma pesquisa realizada pela Associação Brasileira das Empresas de Serviços de Conservação de Energia, em seis anos o Brasil 
-desperdiçou o equivalente a 250GWh em energia o que equivale a R\$62 bilhões, desperdíciu que se deu justamente a tamanha falta de infomação que 
+desperdiçou o equivalente a 250GWh em energia o que equivale a R\$62 bilhões, desperdício que se deu justamente a tamanha falta de infomação que 
 o consumidor tem, se ao saber o quanto tem consumido ou gastado em tempo real o consumidor poderia se prevenir dos desperdícios. 
 
 \subsection[\textit{Setor Energético Brasileiro}]{\textit{Setor Energético Brasileiro}}\label{seb}
-Ao passar dos anos o Brasil vem mostrando cada vez mais o seu potencial na produão de energia, o território brasileiro possibilita as várias formas
+Ao passar dos anos o Brasil vem mostrando cada vez mais o seu potencial na produção de energia, o território brasileiro possibilita as várias formas
 de obtenção da eletricidade. Analisando os dados \cite[p.29]{epe-anuario-2015} e comparando com a \autoref{cap_ele} nota-se que o Brasil subiu duas
-posoções no \textit{Rank} de geração de energia elétrica, isso é reflexo do aumentou da capicidade de produção de energia que chegou na marca de 8,39\%.
+posições no \textit{Rank} de geração de energia elétrica, isso é reflexo do aumentou da capacidade de produção de energia que chegou na marca de 8,39\%.
 
 \begin{table}[!ht]
 	\centering
@@ -117,10 +117,10 @@ posoções no \textit{Rank} de geração de energia elétrica, isso é reflexo d
 A maior produção de energia do Brasil provem das hidroelétricas, o país é referência mundial quando o assunto é obtenção de energia através de
 usinas hidroelétricas - \autoref{cap_hidro} - isso é possível devido a sua alta concentração de rios de grande porte e ao grande volume de chuva
 que alimenta e reforça o poderio hídrico do país. A energia que a usina hidroelétrica fornece é conseguida através da energia hidráulica que provém
-do aproveitamento da força potencial e cinética das correntes de água,rio, mar. A água ao passar por tubulações com muita força e velociadade 
-movimentas as turbinas fazendo com que elas girem em um velociadade suficiente para que os geradores acoplados nas turbinas, transformem energia
+do aproveitamento da força potencial e cinética das correntes de água,rio, mar. A água ao passar por tubulações com muita força e velocidade 
+movimenta-se as turbinas fazendo com que elas girem em um velocidade suficiente para que os geradores acoplados nas turbinas, transformem energia
 mecânica em energia elétrica, lembrando que a eficiência energética de uma usina hidroelétrica é de 65,2\%. Após esse longo processo a energia 
-extraída é enviada para estações de tratamento e após essa etapa é enviada para a matriz energetica que fará a distribuião da energia extraída. 
+extraída é enviada para estações de tratamento e após essa etapa é enviada para a matriz energética que fará a distribuição da energia extraída. 
 
 \begin{table}[!ht]
 	\centering
@@ -142,11 +142,11 @@ extraída é enviada para estações de tratamento e após essa etapa é enviada
 
 É do conhecimento de qualquer brasileiro que possua uma noção básica de geografia que a região norte é a região que possui a maior quantidade de rios,
 essa noção pode levar uma conclusão errada - A região norte é a que mais produz energia - pois nem todo rio tem potencial para que uma hidroelétrica se instale.
-Por sua vez as regiões sul e suldeste são as que mais necessitam de energia, devido a densidade populacional e a quantidade de insdutrias instaladas nas regiões.
-A \autoref{pxcxge} externa essa problemática de uma manéira bem visível. Perceb-se que por exemplo a região sudeste é a que produz mais energia, porém é a que mais
+Por sua vez as regiões sul e sudeste são as que mais necessitam de energia, devido a densidade populacional e a quantidade de industrias instaladas nas regiões.
+A \autoref{pxcxge} externa essa problemática de uma maneira bem visível. Percebe-se que por exemplo a região sudeste é a que produz mais energia, porém é a que mais
 gasta, sendo os gastos maiores do que os ganhos, já a região norte e nordeste são regiões que produzem mais do que gastam. Vendo esse total desequilíbrio
-de geração e consumo de energia, surgiu a necessidade da criação do Sistema Interligado Nacional (SIN). O SIN é constituido por todas as regiões brasileiras
-e é interconectado por meio de uma malha de trasmissão que propicia a transferência de energia entres os subsistemas, permitindo a obtenção de ganhos
+de geração e consumo de energia, surgiu a necessidade da criação do Sistema Interligado Nacional (SIN). O SIN é constituído por todas as regiões brasileiras
+e é interconectado por meio de uma malha de transmissão que propicia a transferência de energia entres os subsistemas, permitindo a obtenção de ganhos
 sinérgicos e explora a diversidade entre os regimes hidrológicos e das bacias. A integração dos recursos de geração e transmissão permite o atendimento ao
 mercado com segurança e economicidade.
 \begin{table}[!ht]
@@ -175,17 +175,16 @@ mercado com segurança e economicidade.
 
 \subsection[\textit{Medição de Energia}]{\textit{Medição de Energia}}\label{med-energia}
 
-Após enterder todo o funcionamento da geração e distribuição de energia no Brasil, é conveniente entender o processo de leitura do consumo de 
-energia elétrica, assim como as questões que esse trabalho faz a respeito da eficácia. Tendo a possibilidade de atualizar esse sistema com novas 
-tecnologias que proporcinam maior segurança e menores custos ao consumidor.
+Após entender todo o funcionamento da geração e distribuição de energia no Brasil, é conveniente entender o processo de leitura do consumo de 
+energia elétrica.
 
 Os primeiros medidores de eletricidade foram utilizados na operação de lâmpadas em série, um vez que a tensão era constante, a corrente exigida
 por cada lâmpada era conhecida e todas estavam ligadas no mesmo interruptor, os medidores foram suficientes apenas para medir o gasto das lâmpadas
 em um tempo determinado, surgindo o termo - lâmpada-hora. Em 1872 o pesquisador Samuel Gardiner trouxe a toda a primeira patente sobre um contator 
 de energia, que era formado por uma lâmpada acoplada a um contador de energia DC controlado por um relógio e um eletroímã, ao passar do tempo várias
-outras patentes foram surgindo e tentando melhor o projeto de Samuel Gardiner, mas foi apenas em 1892 que que surgiu o primeiro medidor de watt-hora
+outras patentes foram surgindo e tentando melhorar o projeto de Samuel Gardiner, mas foi apenas em 1892 que que surgiu o primeiro medidor de watt-hora
 com precisão e confiabilidade suficiente para aplicação em medição de consumo de energia. Criado por Thomas Duncan, inicialmente seu objetivo era a medição
-de circuitos monofásicos, porém com o bom desempenho do aprelho modificações foram feitas para à medição de circuitos polifásicos de energia.
+de circuitos monofásicos, porém com o bom desempenho do aparelho modificações foram feitas para à medição de circuitos polifásicos de energia.
 
 Atualmente a energia elétrica é quantificada através de um equipamento chamado medidor, que nos dias atuais a medição é feita em quilowatt-hora.
 Os medidores da atualidade são caracterizados por padrões da norma NBR 14519, o grupo de medidor mais utilizado pelas concessionárias nas residências
@@ -195,7 +194,7 @@ Os medidores da atualidade são caracterizados por padrões da norma NBR 14519, 
 	\item Grupo B \\
 	É caracterizado por unidades consumidoras de baixa tensão, com tensões inferiores a 2,3KV. As unidades consumidores podem ser classificadas
 	mediante a necessidade da concessionária responsável, geralmente o tipo B1 é residencial, tipo B2 são as residências rurais e estabelecimentos
-	comerciais ou insdustriais são classificados como o tipo B3.
+	comerciais ou industriais são classificados como o tipo B3.
 \end{itemize}
 
 Estima-se que 92\% dos medidores em funcionamento são eletromecânicos, pois são de baixa custo e de boa qualidade, com o erro máximo de 2\% de seu valor
@@ -205,21 +204,19 @@ consumidor, como para o dono do estabelecimento, pois não terá o aporte devido
 \subsection[\textit{Automação}]{\textit{Automação}}\label{automacao}
 Mesmo com a grande evolução que os medidores eletromecânicos sofreram ao longo do tempo, os dispositivos ainda apresentam pontos frágeis, dando uma 
 grande margem ao erro. A grande quantidade de peças mecânicas presente no medidor, faz com que o mesmo possua algumas limitações: interferência na
-opreção na presença de corrente continua que causam deformações no fluxo magnético do leitor; diminuição da precisão quando são tratados de valores
-muito baixos. Hoje em dia existe uma forte tendência a substitução desses medidores eletromeânicos por medidores eletrônicos, irá possibilitar além de uma
-melhor precisão uma maior e melhor medição e até possibilitando uma leitura remota. Hoje no Brasil existe um projejto de lei (PL 2932/20015) que prevê
-a substitução de medidores de consumo de energia eletromecânicos por medidores eletromecânicos inteligentes em até 15 anos após a aprovação da lei.
+opereção na presença de corrente continua que causam deformações no fluxo magnético do leitor; diminuição da precisão quando são tratados de valores
+muito baixos. Hoje em dia existe uma forte tendência a substituição desses medidores eletromecânicos por medidores eletrônicos. A troca irá possibilitar além de uma
+melhor precisão, uma maior e melhor medição e até possibilitando uma leitura remota. Hoje no Brasil existe um projeto de lei (PL 2932/20015) que prevê
+a substituição de medidores de consumo de energia eletromecânicos por medidores eletromecânicos inteligentes em até 15 anos após a aprovação da lei.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-A necessidade de contornar os desafios da crescente demanda energetica insentiva a busca por fontes alternativas e limpas de energia. O Brasil 
-possui 42,30\% de fontes renováveis da sua matriz energetica e esse número deve aumentar até 2021 onde alcançará a marca de 85,00\% (as hidroelétricas
-estão inclusas nesse meio), segundo o Ministério de Minas e Energia. No Plano Decemal de Expansão de Energia (PDE) 2020, o gorveno brasileiro
-assume que a sustentabilidade é a chave mestra para a expenssão de atividades de geração de energia elétrica. A \autoref{fig:fonte_energia} mostra
-que o Brasil vem investindo ao passar dos anos em fontes limpas de energias. Contudo também mostra que o Brasil ainda é muito dependente das 
-hidrelétricas que apesar de ser uma fonte limpa e renovável traz malefícios como as grandes áreas alagadas em volta da represa, impactando no
-ciclo de vida das espécies e obriga populaões ribeirinhas a migrarem, isso mostra que não basta apenas ter fontes limpas
-e renováveis de energia, é necessário buscar melhorias como as Smart Grids e técnicas como de Smart metering.
+A necessidade de contornar os desafios da crescente demanda energética incentiva a busca por fontes alternativas e limpas de energia. O Brasil 
+possui 42,30\% de fontes renováveis da sua matriz energética e esse número deve aumentar até 2021 onde alcançará a marca de 85,00\% (as hidroelétricas
+estão inclusas nesse meio), segundo o Ministério de Minas e Energia. No Plano Decenal de Expansão de Energia (PDE), o governo brasileiro
+assume que a sustentabilidade é a chave mestra para a expanssão de atividades de geração de energia elétrica. A \autoref{fig:fonte_energia} mostra
+que o Brasil vem investindo ao passar dos anos em fontes limpas de energias. Analisando os dados da imagem é possível notar na imagem que não basta apenas ter fontes limpas
+e renováveis de energia, é necessário buscar melhorias como as Smart Grids.
 
 \begin{figure}[h!]
 	\includegraphics[width=0.7\textwidth, keepaspectratio=true]{fontes_energia}
@@ -232,7 +229,7 @@ e renováveis de energia, é necessário buscar melhorias como as Smart Grids e 
 
 As chamadas redes inteligentes de transmissão e distribuição de energia, smart grid, tem como objetivo conectar unidades descentralizadas de geração
 grande e pequena com o consumidor final. Assim nessa ideia o fluxo de energia se comunica de uma maneira bidirecional, a energia que é tradicionalmente
-gerada e distribuidas pelas concessionárias poderá ser gerada e integrada as redes elétricas apartir de unidades consumidoras. O grande pilar dessa 
+gerada e distribuida pelas concessionárias poderá ser gerada e integrada as redes elétricas a partir de unidades consumidoras. O grande pilar dessa 
 tecnologia são os sensores instalados ao longo da rede elétrica que constantemente estão enviando informações referente ao consumo a concessionária,
 possibilitando um planejamento mais eficiente da rede. Aliado aos sensores na rede elétrica o consumidor recebe um medidor inteligente que também
 é integrado com a concessionária em tempo real.
@@ -246,19 +243,19 @@ possibilitando um planejamento mais eficiente da rede. Aliado aos sensores na re
 \end{figure}
 \FloatBarrier
 
-O trabalho apresentará uma forma barata e eficiente de monitorar a energia elétrica de uma residência em tempo real, possibilitanto ao usuário
+O trabalho apresentará uma forma barata e eficiente de monitorar a energia elétrica de uma residência em tempo real, possibilitando ao usuário
 possuir informações valiosas a todo momento. O trabalho fará um paralelo com algumas possibilidades de medição de consumo e monitoramento
 de energia, provando através da prática que é possível conscientizar o usuário do mau uso da energia elétrica.
-Então a partir desse dispositivo será possível entender como e onde a energia está sendo gasta. O sistema também disponibilza de ferramentas para que 
+Então a partir desse dispositivo será possível entender como e onde a energia está sendo gasta. O sistema também disponibiliza de ferramentas para que 
 caso o utente possua o conhecimento necessário o mesmo venha a modificar ou aprimorar o gerenciamento de energia. O sistema nomeado de \textit{power monitor}
 traz consigo uma nova forma de enxergar o consumo dos aparelhos presentes em uma residência, trocando o quilowatt-hora pela moeda de circulação no país,
-o real, tal mudança é o principal fator de consientização, pois aproxima o consumidor dos gastos energéticos.
+o real, tal mudança é o principal fator de conscientização, pois aproxima o consumidor dos gastos energéticos.
 
 
 \section{Motivação}
 A conjuntura do cenário energético atual do Brasil, junto com a crise em vários setores e principalmente no setor
 energético do país e a falta de transparência na informação levada ao usuário foi o que motivou este trabalho. Hoje se vive em uma realidade onde
-ter informação em tempo real do consumo de energia em um estabeleciento é muito difícil, pois os equipamentos que proporcionam esse tipo de informação
+ter informação em tempo real do consumo de energia em um estabelecimento é muito difícil, pois os equipamentos que proporcionam esse tipo de informação
 não são acessíveis a todos os brasileiros, apenas companhias de energia ou pessoas com alto grau de estudo conseguem manusear ou entender o dados
 fornecidos por esse tipo de equipamento. Toda essa privação da informação traz consequências, uma delas é o descaso do brasileiro em relação ao
 racionamento de energia elétrica, como já foi citado no trabalho o Brasil em seis anos desperdiçou o equivalente a R\$ 62 bilhões, motivo que se 
